--- a/src/usdFabricSchema/CMakeLists.txt
+++ b/src/usdFabricSchema/CMakeLists.txt
@@ -10,11 +10,11 @@ pxr_plugin(${PXR_PACKAGE}
         vt
 
     INCLUDE_DIRS
+        ${USD}/include
         ${Boost_INCLUDE_DIRS}
         ${PYTHON_INCLUDE_DIRS}
-        ${USD_DEPS_PIXAR}/include
+        ${USD_DEPS}/include
         ${OPENEXR_INCLUDE_DIR}/OpenEXR
-        ${USD_DEPS_VFX}/include
 
     PUBLIC_CLASSES
         tokens
